updated the latex2pdf
