# routes/ge_pdf.js
@@ -11,16 +11,24 @@ const { v4: uuidv4 } = require('uuid');
 const crypto = require('crypto');
 const LatexPDF = require('../ge_modules/mLatexPDF');
 const { waitForDebugger } = require('inspector');
+const { maxFieldsExceeded } = require('formidable/src/FormidableError');
+
+
 
 /* Get All Tasks */
 router.get('/ge_task', function (req, res, next) 
     {
-        let sql = "select Id, folder, files, owner, options, datetime(createdDT_int/1000,'unixepoch') as createdDT  from ge_task order by createdDT_int DESC"
-        let params = []
+        let sql = "select Id, folder, files, owner, dataclass, expires, type, description, options, datetime(created/1000,'unixepoch') as createdDT  from ge_task order by created DESC";
+        let params = [];
        
         if (req.query.owner) {
-            sql = "select Id, folder, files, owner, options, datetime(createdDT_int/1000,'unixepoch') as createdDT from ge_task where owner = ?  order by createdDT_int DESC"
-            params = [req.query.owner]
+            sql = "select Id, folder, files, owner, dataclass, expires, type, description, options, datetime(created/1000,'unixepoch') as createdDT from ge_task where owner = ?  order by created DESC";
+            params = [req.query.owner];
+        } 
+        
+        if (req.query.type) {
+            sql = "select Id, folder, files, owner, dataclass, expires, type, description, options, datetime(created/1000,'unixepoch') as createdDT from ge_task where type = ?  order by created DESC";
+            params = [req.query.type];
         } 
         
         db.all(sql, params, (err, rows) => {
@@ -36,7 +44,7 @@ router.get('/ge_task', function (req, res, next)
     });
 router.get('/ge_task/:ID', function (req, res, next) 
     {
-        var sql = "select Id, folder, files, owner, options, datetime(createdDT_int/1000,'unixepoch') as createdDT from ge_task where Id = ?"
+        var sql = "select Id, folder, files, owner, dataclass, expires, type, description, options, datetime(created/1000,'unixepoch') as createdDT from ge_task where Id = ?"
         var params = [req.params.ID]
         db.all(sql, params, (err, rows) => {
             if (err) {
@@ -68,7 +76,7 @@ router.get('/ge_task/:ID', function (req, res, next)
 
 /* Add Task */
 router.post('/ge_task', function (req, res) {
-    create_task(req, res);
+    create_task(req, res) ;
 });
 
 /* Delete Task */
@@ -79,7 +87,7 @@ router.delete('/ge_task/:ID', function (req, res, next) {
 /* Download file */
 router.get('/ge_task/:ID/download/:filename', function (req, res) {
 
-    var sql = "select Id, folder, files, owner, options, datetime(createdDT_int/1000,'unixepoch') as createdDT from ge_task where Id = ?"
+    var sql = "select Id, folder, files, owner, dataclass, expires, type, description, options, dataclass, datetime(created/1000,'unixepoch') as createdDT from ge_task where Id = ?"
         var params = [req.params.ID]
         db.all(sql, params, (err, rows) => {
             if (err) {
@@ -104,6 +112,10 @@ router.patch('/ge_task', function (req, res) {
         folder: req.body.folder,
         files: req.body.files,
         owner: req.body.owner,
+        dataclass : req.body.dataclass, 
+        expires : req.body.expires,
+        type : req.body.type,
+        description : req.body.description,
         options : req.body.options
     }
 
@@ -113,12 +125,15 @@ router.patch('/ge_task', function (req, res) {
            folder = COALESCE(?,folder), 
            owner = COALESCE(?,owner), 
            options = COALESCE(?,options) 
-           WHERE id = ?`,
-        [data.files, data.folder, data.owner, data.options, req.params.Id],
+           dataclass = COALESCE(?,dataclass); 
+           expires = COALESCE(?,expires);
+           type = COALESCE(?,type);
+           description = COALESCE(?,description);
+           WHERE Id = ?`,
+        [data.files, data.folder, data.owner, data.options, data.dataclass, data.expires, data.type, data.description, data.Id],
         function (err, result) {
             if (err){
                 res.status(400).json({"error": res.message})
-                return;
             }
             res.json({
                 message: "success",
@@ -127,57 +142,184 @@ router.patch('/ge_task', function (req, res) {
             })
     });
 });
+function first_not_null(values) {
 
-function create_task( req, res) {
-    
-    let texpdf = new LatexPDF.LatexPDF();
-        
-    if (req.body.latex) {
-        texpdf.save_body_tex (req, res, function() {
-            texpdf.create_pdfs (req, res, function () {
-                create_tex_task(req, res, texpdf)});
-        });
-    } else {
-        texpdf.save_form_tex (req, res, function() {
-            texpdf.create_pdfs (req, res, function () {
-                create_tex_task(req, res, texpdf)});
-        });
-    }
-
-    if (!texpdf.files) {
-        res.status(400).json({"error": "No tex found in body or form"})
+    for (let i = 0; i < values.length; i++) {
+        if (values[i]) {
+            return values[i]
+        };
     }
 
 }
+function file_content(latex_template, callback) {
+        
+    var ID = latex_template.ID;
+        
+    if (!ID) {
+        ID = latex_template;
+    }
 
-function create_tex_task (req, res, texpdf) {
+    var sql = "select Id, folder, files, owner, dataclass, expires, type, description, options, datetime(created/1000,'unixepoch') as createdDT from ge_task where Id = ?"
+    var params = [ID]
+    db.all(sql, params, (err, rows) => {
+        if (err) {
+          callback (err, null)
+        } else {
+            try {
+            
+            let texpdf = new LatexPDF.LatexPDF(rows[0].folder, rows[0].files);
+            let filename = first_not_null(new Array (latex_template.filename, 
+                                                          texpdf.first_tex_file()));
+            texpdf.file_content(filename, (err, content) => {
+                                    callback (err, content);
+                                });
+            
+            } catch (err) {
+                callback (err, null);
+            }
+        }
+      });
+}
+function create_task_body( body, callback) {
+    
+    let texpdf = new LatexPDF.LatexPDF();
+    
+    if (body.latex_template && body.json_data) {
+            file_content(body.latex_template, (err, content) => {
+                if (err) {
+                    callback (err, texpdf);
+                } else {
+                    texpdf.save_tex_template (body, content, (err) => {
+                        if (err) {
+                            callback (err, texpdf);
+                        } else {
+                            texpdf.create_pdfs (() => {
+                                callback(null, texpdf);
+                            });
+                        }
+                    });
+                }
+            });
+        } else {
+            if (body.latex) {
+                texpdf.save_tex (body, (err) => {
+                    if (err) {
+                        callback (err, texpdf);
+                    } else {
+                        texpdf.create_pdfs (() => {
+                            callback(null, texpdf);
+                        });
+                    }
+                });
+            } else {
+            callback (new Error("no latex or json data found in body"),null);
+            }
+        }
+
+}
+
+function create_task_form (req, callback) {
+    
+    let texpdf = new LatexPDF.LatexPDF();
+    
+    try {
+        texpdf.get_form_tex (req, function(err, fields, files) {
+                if (err) { 
+                    callback(err);
+                } else {
+                    if (fields.latex_template) {
+                        file_content (fields.latex_template, (err, template) => {
+                            if (err) {
+                                callback (err);
+                            } else { 
+                                texpdf.save_form_tex_template (fields, files, template, (err) => {
+                                    if (err) {
+                                        callback (err);
+                                    } else {    
+                                        texpdf.create_pdfs (() => {
+                                            callback(null, texpdf);
+                                        });
+                                    }
+                                });
+                            }
+                        });
+                    } else {
+                        texpdf.save_form_tex (fields, files, (err) => {
+                            if (err) {
+                                callback (err);
+                            } else {    
+                                texpdf.create_pdfs (() => {
+                                    callback(null, texpdf);
+                                });
+                            }
+                        });
+                    }
+                }
+        });
+        
+    } catch (err) {
+        callback (err, texpdf);
+    } 
+       
+}
+
+function create_task(req, res) {
+
+        if (req.body) { 
+            // res.json(req.body);
+            create_task_body (req.body,  (err, texpdf) => {
+                if (err) {
+                    res.status(400).json({"error": err.message})
+                } else {
+                create_tex_task(res, texpdf);
+                }
+            });
+        } else {
+            create_task_form (req, (err, texpdf) => {
+                if (err) {
+                    res.status(400).json({"error": err.message})
+                } else {
+                create_tex_task(res, texpdf)
+                }
+            });
+        }
+}
+
+
+
+function create_tex_task (res, texpdf) {
 
     var data = {
         Id: uuidv4(),
         folder: texpdf.folder,
         files: texpdf.files(),
         owner:  texpdf.owner,
+        created : Date.now(),
+        dataclass : texpdf.dataclass,
+        description : texpdf.description,
+        expires: texpdf.expires,
+        type : texpdf.type, 
         options: texpdf.options,
-        createdDT_int : Date.now()
     }
  
-    var sql ='INSERT INTO ge_task (Id, folder, files, owner, options, createdDT_int) VALUES (?,?,?,?,?,?)'
-    var params =[data.Id, data.folder, data.files, data.owner, data.options, data.createdDT_int]
+    var sql ='INSERT INTO ge_task (Id, folder, files, owner, created, dataclass, description, expires, type, options) VALUES (?,?,?,?,?,?,?,?,?,?)'
+    var params =[data.Id, data.folder, data.files, data.owner, data.created, data.dataclass, data.description, data.expires, data.type, data.options]
     db.run(sql, params, function (err, result) {
-        if (err){
-            res.status(400).json({"error": err.message})
-            return;
-        }
-        res.json({
+        if (err) {
+            res.status(400).json({
+                "error": err.message})
+         }
+            res.status(201).json({
             "message": "success",
             "data": data,
             "id" : this.lastID
         })
+      
     });
 }
 
 function delete_task (req, res) {
-    var sql = "select Id, folder, files, owner, options, datetime(createdDT_int/1000,'unixepoch') as createdDT from ge_task where Id = ?"
+    var sql = "select Id, folder, files, owner, options, datetime(created/1000,'unixepoch') as createdDT from ge_task where Id = ?"
     var params = [req.params.ID]
     db.all(sql, params, (err, rows) => {
         if (err) {
@@ -191,19 +333,21 @@ function delete_task (req, res) {
         }
 
         if (!rows[0].folder || !rows[0].files) { 
-            // folder and or files empty unable to delete files just delete ge_task record
+            // folder and or files empty just delete ge_task record
             delete_tex_task (req, res)
-        }
+        } else {
            
-        let texpdf = new LatexPDF.LatexPDF(rows[0].folder, rows[0].files);
-
-        texpdf.delete_files (texpdf.input_files, function () {
-                texpdf.delete_files (texpdf.output_files, function () {
+            let texpdf = new LatexPDF.LatexPDF(rows[0].folder, rows[0].files);
+            
+            texpdf.delete_all_files_and_folder ( (err) => {
+                    if (err) {
+                        res.status(400).json({"error": res.message})
+                        return;
+                    }
                     delete_tex_task (req, res);
-                });
             });
-        });
-
+        }
+    });
 }
 
 function delete_tex_task(req, res) {
